# scim

./: .dockerignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: docker-publish.yml
config/: config.toml
proto/: scim.proto
src/: client.rs  database.rs  grpc_server.rs  http_server.rs  main.rs  scim_schemas.rs  settings.rs
